Fix table header alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,7 +20,7 @@ blockquote { margin-inline-start: 20px; padding-left: 20px; border-left: 2px sol
 table { border-collapse: collapse }
 table tr td,table tr th { padding: 0 1ch }
 table tr td { vertical-align: top }
-table tr th { border-bottom: 1px solid #ddd; color: #000; font-weight: normal }
+table tr th { border-bottom: 1px solid #ddd; color: #000; font-weight: normal; text-align: inherit }
 @media(prefers-color-scheme:dark) {
 body { background-color: #101010; color: #a0aaaf }
 a { color: #d0dadf }
